2001-01-21  Andrew H. Chatham <andrew.chatham@duke.edu>
	* pyvorbisinfo.c: Comment objects now store pointers to the
	comment structures, not the structure itself. Helps with dealloc.
	* pyvorbisinfo.c (write_comments), (py_comment_append_to),
	(py_comment_write_to): Added
	* pyvorbisinfo.c (py_comment_assign): Catch del on a comment
	object. Returns not implemented exception for now
	* README: Explain how to use comments
	* vcedit.h Copied in from vorbiscomment
	* vcedit.c: Copied in from vorbiscomment
	
2001-12-09  Andrew H. Chatham <andrew.chatham@duke.edu>
	* config_unix.py: Better logging and finer-grained path arguments
	
2001-09-02  Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: bumped version number to 0.4

	* Changelog: start using the same dating scheme from ogg-python's 
	Changelog

8-30-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/pyvorbisfile.c (py_ov_pcm_seek[_page]) Use the implementation
	  of arg_to_int64 provided by the ogg module

	* test/*.py: updated to use the new ao module's API
	
6-01-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/pyvorbisinfo.c  (py_comment_as_dict): Fixed call with args=NULL
	ogg123.py works now

	* src/*.h src/*.c: Changed to C-style comments

	* test/ogg123.py: Removed stupid print statement

5-14-2001  Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: Bumped to version 0.3

	* src/general.[ch]: Removed arg_to_64 and use ogg-python's arg_to_int64

	* src/general.h: Fixed preprocessor warnings

	* src/py*.c: Methods which take no arguments now require no arguments
	Made functions match Python-expected signatures

	* test/short.py: Fixed to match new Python ao module. I think I broke
	something, so test/ogg123.py doesn't work at the moment
	
1-17-2001 Andrew H. Chatham <andrew.chatham@duke.edu>
	* All was essentially created, since this is the first separation
	of pyvorbis and pyogg
	
11-29-2000 Andrew H. Chatham <andrew.chatham@duke.edu>